--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="row">
                 <div class="col-lg-6">
                     <div class="hero-text">
-                        <h1>Идель - Строительная компания</h1>
+                        <h1>Идель</h1><h2>Строительная компания</h2>
                         <p>Возведение конструкций, построение будущего: там, где качество сочетается с мастерством.</p>
                         <a href="#" class="primary-btn my_main_btn">Оставить заявку</a>
                     </div>
